--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.4",
     "express": "^4.21.2",
     "form-data": "^4.0.1",
